fixed alignment issues with embeds in post editor

--- a/sass/editor-style.scss
+++ b/sass/editor-style.scss
@@ -242,7 +242,7 @@ img {
   border-left: none;
 }
 .wp-block-embed {
-  margin: $baseline-height 0;
+  margin: $baseline-height auto;
 }
 .has-small-font-size {
   font-size: 12px;
